# Monty

./: Cargo.toml
datagen/src/: thread.rs
src/: batcher.rs  chess.rs  lib.rs  mcts.rs  networks.rs  tree.rs  uci.rs
src/chess/: board.rs
src/mcts/: batch.rs  corrhist.rs  evaluator.rs  helpers.rs  iteration.rs  params.rs
src/networks/: accumulator.rs  layer.rs  policy.rs  value.rs
src/tree/: edge.rs  hash.rs  node.rs  stats.rs
src/uci/: timeman.rs
