[package]
name = "monty"
version = "1.0.0"
edition = "2021"
authors = ["Jamie Whiting"]

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[dependencies]
goober = { git = 'https://github.com/jw1912/goober.git' }
half = "2.4.1"

[features]
embed = []
datagen = []

[workspace]
members = ["datagen", "train/policy", "train/value"]
resolver = "2"
